[gd_scene load_steps=18 format=3 uid="uid://bacmnswmdjake"]

[ext_resource type="Script" path="res://Data/Elements/Menus/Main/mainmenu.gd" id="1_2pii2"]
[ext_resource type="Texture2D" uid="uid://dewopch73qswj" path="res://Assets/Sprites/UI/MenuBG.png" id="1_p1u3v"]
[ext_resource type="Texture2D" uid="uid://ciib75qmyf4na" path="res://Assets/Sprites/UI/Logo-sheet.png" id="2_hr35o"]
[ext_resource type="Texture2D" uid="uid://c6b80mm2fssok" path="res://Assets/Sprites/UI/texbox2.png" id="4_on23v"]
[ext_resource type="Texture2D" uid="uid://d0qjwu7yulphv" path="res://Assets/Sprites/UI/Menu Buttons/startbutton.png" id="5_v8cjr"]
[ext_resource type="Texture2D" uid="uid://b5x7xq6khecro" path="res://Assets/Sprites/UI/Menu Buttons/startbutton_hover.png" id="6_vti8e"]
[ext_resource type="Texture2D" uid="uid://bpk81iudpuiyl" path="res://Assets/Sprites/UI/Menu Buttons/optionsbutton.png" id="6_y32bl"]
[ext_resource type="Texture2D" uid="uid://bmibyiml74ydl" path="res://Assets/Sprites/UI/Menu Buttons/creditsbutton.png" id="7_gamd0"]
[ext_resource type="Texture2D" uid="uid://eamcm0gq4lp6" path="res://Assets/Sprites/UI/Menu Buttons/optionsbutton_hover.png" id="8_ca4dc"]
[ext_resource type="Texture2D" uid="uid://2dy4fv4kc13t" path="res://Assets/Sprites/UI/Menu Buttons/creditsbutton_hover.png" id="10_pn1py"]
[ext_resource type="FontFile" uid="uid://dcuqudims42im" path="res://Data/PKMN RBYGSC.ttf" id="11_hooc2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ye5"]
atlas = ExtResource("2_hr35o")
region = Rect2(0, 0, 222, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hpcd"]
atlas = ExtResource("2_hr35o")
region = Rect2(222, 0, 222, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_het7l"]
atlas = ExtResource("2_hr35o")
region = Rect2(444, 0, 222, 123)

[sub_resource type="AtlasTexture" id="AtlasTexture_bti7i"]
atlas = ExtResource("2_hr35o")
region = Rect2(666, 0, 222, 123)

[sub_resource type="SpriteFrames" id="SpriteFrames_trykl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ye5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hpcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_het7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bti7i")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_7drt8"]
font = ExtResource("11_hooc2")
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pii2")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("1_p1u3v")
centered = false
metadata/_edit_lock_ = true

[node name="Logo" type="AnimatedSprite2D" parent="."]
position = Vector2(448, 208)
scale = Vector2(1.86585, 1.86585)
sprite_frames = SubResource("SpriteFrames_trykl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = 58.0
offset_right = 145.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_on23v")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = 48.0
offset_right = 111.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
texture_normal = ExtResource("5_v8cjr")
texture_hover = ExtResource("6_vti8e")

[node name="Options" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
texture_normal = ExtResource("6_y32bl")
texture_hover = ExtResource("8_ca4dc")

[node name="Credits" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_gamd0")
texture_hover = ExtResource("10_pn1py")

[node name="Version Info" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 728.0
offset_right = 95.0
offset_bottom = 754.0
text = "7.7.7"
label_settings = SubResource("LabelSettings_7drt8")

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
